objects/Monthly_Revenue_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>Costs__c</fullName>
        <label>Cost of Revenue</label>
        <summarizedField>Department_Revenue_Schedule__c.Costs__c</summarizedField>
        <summaryForeignKey>Department_Revenue_Schedule__c.Monthly_Revenue_Schedule__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gross__c</fullName>
        <formula>Revenue__c - Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Monthly Revenue Schedules</relationshipLabel>
        <relationshipName>Monthly_Revenue_Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Revenue_Forecast__c</fullName>
        <label>Revenue Forecast</label>
        <summarizedField>Product_Revenue_Schedule__c.Revenue__c</summarizedField>
        <summaryFilterItems>
            <field>Product_Revenue_Schedule__c.In_Forecast__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Product_Revenue_Schedule__c.Monthly_Revenue_Schedule__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <label>Revenue</label>
        <summarizedField>Product_Revenue_Schedule__c.Revenue__c</summarizedField>
        <summaryForeignKey>Product_Revenue_Schedule__c.Monthly_Revenue_Schedule__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Monthly Revenue Schedule</label>
    <nameField>
        <displayFormat>MRS-{0}</displayFormat>
        <label>Monthly Revenue Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monthly Revenue Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>